codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__mcp_retry_no_failed_servers.snap
---
source: tui/src/chatwidget/tests.rs
expression: rendered_text
---
• No failed MCP servers to retry.
