codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__mcp_timeout_invalid_seconds.snap
---
source: tui/src/chatwidget/tests.rs
expression: rendered_text
---
• Usage: /mcp timeout <name> <seconds>
