codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plan_implementation_popup.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 2287
expression: popup
---
  Plan ready: choose next step
  Select how to proceed from Plan mode.

› 1. Start Implementation  Switch to Default mode and start coding.
  2. Discuss Further       Stay in Plan mode and continue refining.
  3. Cancel                Pause this plan run and keep the plan file.
  4. Do something else...  Enter a one-line prompt and send it immediately.

  Cancel keeps the plan file and sets status to `Paused`.
  ↑/↓: select  Enter: confirm  Esc: close
