codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plan_menu_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Plan list
  0 plans · filter: Open · base: CODEX_HOME/plans

  Search plans by title, status, or path
› Create new plan       Create/open active plan file
  Plan settings
  No plans in this tab

  ↑/↓: select  Enter: choose  Tab: next filter  type: search  Esc: close
